--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "dev:backend": "npm install --prefix backend start",
     "sequelize": "npm run --prefix backend sequelize",
     "sequelize-cli": "npm run --prefix backend sequelize-cli",
-    "start": "npm start --prefix backend",
-    "build": "npm run --prefix backend build"
+    "start": "npm start --prefix backend"
   },
   "repository": {
     "type": "git",
@@ -21,5 +20,8 @@
   "bugs": {
     "url": "https://github.com/no8cai/API-project/issues"
   },
-  "homepage": "https://github.com/no8cai/API-project#readme"
+  "homepage": "https://github.com/no8cai/API-project#readme",
+  "dependencies": {
+    "pg": "^8.8.0"
+  }
 }
