--- a/backend/package.json
+++ b/backend/package.json
@@ -24,15 +24,18 @@
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "express-validator": "^6.14.2",
+    "faker": "^4.1.0",
     "helmet": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "per-env": "^1.0.2",
     "pg": "^8.8.0",
     "sequelize": "^6.25.6",
-    "sequelize-cli": "^6.5.2"
+    "sequelize-cli": "^6.5.2",
+    "@faker-js/faker": "^7.6.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "dotenv-cli": "^6.0.0",
     "nodemon": "^2.0.20",
     "sqlite3": "^5.1.2"
